[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cold_war_zombies"
version = "1.0.4"
description = "A package for comparing weapons in Call of Duty Cold War Zombies"
readme = "README.md"
authors = [
  { name = "Peter Rigali", email = "peterjrigali@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy~=1.23.3",
    "matplotlib~=3.4.3",
    "pandas~=1.3.2"
]

[project.urls]
Documentation = "https://medium.com/@peterjrigali/best-weapon-in-zombies-9fddd33735c5"
